[package]
name = "gup"
version = "1.0.0"
authors = ["araij <araijn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.4.2", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
fixedbitset = "0.4.2"
itertools = "0.11.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tempfile = "3.8.0"
crossbeam-channel = "0.5.8"
rayon = "1.7.0"

[dev-dependencies]
assert_cmd = "2.0.12"
criterion = "0.5.1"

[profile.test]
inherits = "release"
debug = true
debug-assertions = true

[profile.release-with-debug]
inherits = "release"
debug = true
